syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.spexity.proto";
option java_outer_classname = "WebHomeProto";

package webhome;

import "google/protobuf/timestamp.proto";

message GetPostsRequest {
  int32 page = 1;
  int32 length = 2;
}

message Post {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string subject = 3;
  string body = 4;
}

message GetPostsReply {
  repeated Post posts = 1;
}

service WebHomePosts {
  rpc GetPosts (GetPostsRequest) returns (GetPostsReply) {}
}